--- a/server/render.env.example
+++ b/server/render.env.example
@@ -1,40 +1,20 @@
-# Render environment variables for the backend service
-# Copy these into Render’s Environment tab (as Environment Variables)
+# Supabase Configuration
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+SUPABASE_ANON_KEY=your_anon_key_here
 
-# Core
-OPENAI_API_KEY=your_openai_key
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL_ANALYSIS=gpt-4o-mini
+OPENAI_MODEL_HTML=gpt-4o-mini
+OPENAI_MODEL_EDIT=gpt-5o-mini
+OPENAI_MODEL_VISION=gpt-4o-mini
 
-# Optional model overrides
-OPENAI_MODEL_VISION=gpt-5-vision
-OPENAI_MODEL_ANALYSIS=gpt-5
-OPENAI_MODEL_HTML=gpt-5
-OPENAI_MODEL_EDIT=gpt-5
-OPENAI_MODEL_SUMMARY=gpt-4o
-OPENAI_MODEL_SCRIPT=gpt-4o
+# Roboflow Configuration
+ROBOFLOW_API_KEY=your_roboflow_api_key_here
 
-# Supabase
-SUPABASE_URL=your_supabase_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
-# (optional, server-only)
-SUPABASE_SERVICE_KEY=your_supabase_service_role_key
+# ElevenLabs Configuration
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
-# Stripe
-STRIPE_SECRET_KEY=sk_live_or_test
-STRIPE_WEBHOOK_SECRET=whsec_...
-# Optional price/product settings
-STRIPE_PRICE_ID_MONTHLY=price_...
-STRIPE_PRICE_ID_YEARLY=price_...
-STRIPE_PRODUCT_ID=prod_...
-FRONTEND_URL=https://your-frontend.example
-
-# Roboflow (condition detection)
-ROBOFLOW_API_KEY=rf_key
-ROBOFLOW_PROJECT_ID=your_conditions_project
-ROBOFLOW_MODEL_VERSION=your_conditions_version
-
-# Roboflow (teeth segmentation for AprilVision mapper)
-ROBOFLOW_SEG_PROJECT_ID=teeth-seg-3537-iaky1
-ROBOFLOW_SEG_MODEL_VERSION=1
-
-# Tooth mapping provider: set to "april_vision" to enable the new mapping
-TOOTH_MAPPING_PROVIDER=april_vision
+# Feature Flags
+STAGING_V2=false
