Implement complete AWS S3 integration and admin panel system
- Add S3 service with clinic folder management and metadata storage
- Create admin routes with authentication and clinic management endpoints
- Implement DICOM processor for patient metadata extraction
- Build admin frontend with dashboard, clinic management, and S3 monitoring
- Integrate admin router into main FastAPI application
- Add admin route to frontend routing system
- Use environment variables for AWS credentials (security best practice)

Features:
- Automatic S3 folder creation for new clinics
- Admin panel with clinic status tracking
- DICOM metadata extraction and processing
- S3 connection monitoring and health checks
- Clinic setup workflow management
- Search and filtering capabilities

Admin credentials: admin/scanwise2025
S3 bucket: scanwise-xrays (ap-southeast-2)

Environment variables needed:
- AWS_ACCESS_KEY_ID
- AWS_SECRET_ACCESS_KEY
- AWS_REGION (default: ap-southeast-2)
- AWS_S3_BUCKET (default: scanwise-xrays)

--- a/server/render.env.example
+++ b/server/render.env.example
@@ -18,3 +18,9 @@ ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
 # Feature Flags
 STAGING_V2=false
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+AWS_REGION=ap-southeast-2
+AWS_S3_BUCKET=scanwise-xrays
