Fix Stripe webhook and admin panel: Enhanced error handling, lazy service initialization, and detailed webhook logging for S3 integration

--- a/server/render.env.example
+++ b/server/render.env.example
@@ -24,3 +24,6 @@ AWS_ACCESS_KEY_ID=your_aws_access_key_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_REGION=ap-southeast-2
 AWS_S3_BUCKET=scanwise-xrays
+
+# Stripe Webhook (NEW - for S3 integration)
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
