feat: Complete interactive avatar system, email integration, and AWS fixes
- Implemented full Heygen API integration for AI avatar responses
- Added email service with PDF generation and patient communication
- Fixed AWS integration issues with clinic folder matching
- Enhanced consultation page with video avatar support
- Added prominent avatar consultation access in ViewReport
- Improved error handling and fallback systems
- Added comprehensive logging and debugging for AWS issues

--- a/server/render.env.example
+++ b/server/render.env.example
@@ -27,3 +27,10 @@ AWS_S3_BUCKET=scanwise-xrays
 
 # Stripe Webhook (NEW - for S3 integration)
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+
+# Email Service Configuration (Gmail)
+GMAIL_EMAIL=info@scan-wise.com
+GMAIL_APP_PASSWORD=yase whsd fqlm hlzb
+
+# Email Sending Configuration
+EMAIL_FROM_NAME=Scanwise Dental Reports
