data: import batch 2 – endodontics treatments/conditions/mappings
- Added 13 endodontic treatments (12 new + 1 updated)
- Added 4 new conditions (necrotic_pulp, periapical_abscess, periapical_lesion, symptomatic_apical_periodontitis)
- Added 5 condition mappings with stage hints
- Updated type system to support optional 'stage' hints in mappings
- Total: 13 treatments, 5 conditions, 5 mappings
- All treatments include AU ADA codes, pricing, durations, and tooth rules

--- a/client/src/data/mappings.core.json
+++ b/client/src/data/mappings.core.json
@@ -3,8 +3,119 @@
     "condition": "irreversible_pulpitis",
     "treatments": [
       {
+        "treatment": "endo_extirpation",
+        "priority": 1,
+        "stage": 1
+      },
+      {
         "treatment": "endo_rct_prep_1",
-        "priority": 1
+        "priority": 2,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_rct_obt_1",
+        "priority": 3,
+        "stage": 2
+      }
+    ]
+  },
+  {
+    "condition": "necrotic_pulp",
+    "treatments": [
+      {
+        "treatment": "endo_rct_prep_1",
+        "priority": 1,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_additional_irrigation_visit",
+        "priority": 2,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_rct_obt_1",
+        "priority": 3,
+        "stage": 2
+      }
+    ]
+  },
+  {
+    "condition": "periapical_abscess",
+    "treatments": [
+      {
+        "treatment": "endo_extirpation",
+        "priority": 1,
+        "stage": 1
+      },
+      {
+        "treatment": "endo_additional_irrigation_visit",
+        "priority": 2,
+        "stage": 1
+      },
+      {
+        "treatment": "endo_rct_prep_1",
+        "priority": 3,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_rct_obt_1",
+        "priority": 4,
+        "stage": 2
+      }
+    ]
+  },
+  {
+    "condition": "periapical_lesion",
+    "treatments": [
+      {
+        "treatment": "endo_rct_prep_1",
+        "priority": 1,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_rct_obt_1",
+        "priority": 2,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_calcified_per_canal",
+        "priority": 3,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_remove_root_filling_per_canal",
+        "priority": 4,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_apicectomy_per_root",
+        "priority": 5,
+        "stage": 3
+      }
+    ]
+  },
+  {
+    "condition": "symptomatic_apical_periodontitis",
+    "treatments": [
+      {
+        "treatment": "endo_extirpation",
+        "priority": 1,
+        "stage": 1
+      },
+      {
+        "treatment": "endo_rct_prep_1",
+        "priority": 2,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_additional_irrigation_visit",
+        "priority": 3,
+        "stage": 2
+      },
+      {
+        "treatment": "endo_rct_obt_1",
+        "priority": 4,
+        "stage": 2
       }
     ]
   }
