data: patch batch 2 – fix periapical_lesion → periapical-lesion
- Fixed canonical condition key mismatch in 8 treatments
- Updated mappings.core.json to use correct key
- Validation working as intended: caught snake_case vs kebab-case error
- All condition references now use canonical 'periapical-lesion' (kebab-case)

--- a/client/src/data/mappings.core.json
+++ b/client/src/data/mappings.core.json
@@ -65,7 +65,7 @@
     ]
   },
   {
-    "condition": "periapical_lesion",
+    "condition": "periapical-lesion",
     "treatments": [
       {
         "treatment": "endo_rct_prep_1",
